@@ -1,5 +1,8 @@
 plyr 0.1.10 (2009-XX-X) ---------------------------------------------------
 
+
+* tweaks to splitter_d so now much faster when many combinations of the factors do not occur in the data (using ninteraction instead of interaction)
+* ninteraction now preserves NAs
 * leaving .fun as NULL now always returns list (thanks to Stavros Macrakis for the bug report)
 
 plyr 0.1.9 (2009-06-23) ---------------------------------------------------
